--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.10.5",
     "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-date-pickers": "^6.12.1",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.79.0",
     "@nivo/geo": "^0.80.0",
@@ -23,11 +26,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -36,7 +43,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
