--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "chart.js": "^3.9.1",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
+    "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-webcam": "^7.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
