--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 PORT=3002
 MongoDB_URI=mongodb+srv://schmeckm:VyZsyVQviGAjffqG@indoortracking.abzl9.mongodb.net/IndoorTracking?retryWrites=true&w=majority
-PARETOANYWHERE_URL=http://34.27.176.104:3001
-Backend_URL=http://localhost:3002
+PARETOANYWHERE_URL=http://104.197.254.149:3001
+Backend_URL=http://104.197.254.149:3002
 PullTime=10001
