--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
         "axios": "^1.5.0",
         "chart.js": "^3.9.1",
         "date-fns": "^2.30.0",
+        "dotenv": "^16.3.1",
+        "firebase": "^10.7.1",
         "formik": "^2.2.9",
         "jsqr": "^1.4.0",
         "leaflet": "^1.9.4",
+        "mqtt": "^5.3.1",
+        "path": "^0.12.7",
         "quagga": "^0.12.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.8.0",
