--- a/package.json
+++ b/package.json
@@ -43,13 +43,15 @@
         "react-bootstrap": "^2.8.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
+        "react-google-button": "^0.7.2",
         "react-leaflet": "^4.2.1",
         "react-pro-sidebar": "^0.7.1",
         "react-qr-reader": "^3.0.0-beta-1",
         "react-redux": "^8.0.2",
-        "react-router-dom": "^6.14.1",
+        "react-router-dom": "6",
         "react-scripts": "^5.0.1",
         "react-webcam": "^7.1.1",
+        "validator": "^13.11.0",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
     },
